--- a/plugin.xml
+++ b/plugin.xml
@@ -478,9 +478,9 @@
             highlightPreferenceValue="true"
             icon="icons/discussion-icon.png"
             includeOnPreferencePage="true"
-            isGoToNextNavigationTarget="false"
+            isGoToNextNavigationTarget="true"
             isGoToNextNavigationTargetKey="discussionGoNext"
-            isGoToPreviousNavigationTarget="false"
+            isGoToPreviousNavigationTarget="true"
             isGoToPreviousNavigationTargetKey="discussionGoPrev"
             label="Discussion Comments"
             overviewRulerPreferenceKey="discussionOverviewRuler"
