changes to remove rulerannotationcontributionfactory and rulerannotationcontribution

--- a/build.properties
+++ b/build.properties
@@ -3,6 +3,8 @@ output.. = classes/,
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               libs/boon-0.33.jar
+               libs/boon-0.33.jar,\
+               icons/
 jars.compile.order = .
 jars.extra.classpath = libs/boon-0.33.jar
+src.includes = icons/
