--- a/plugin.xml
+++ b/plugin.xml
@@ -14,53 +14,17 @@
          <possibleChildren>
             <or>
                <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.ShelvesetGroupItem">
-               </instanceof>
-               <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.ShelvesetUserItem">
-               </instanceof>
-               <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.ShelvesetUserCategoryItem">
-               </instanceof>
-               <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.ShelvesetItem">
+                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.IItemContainer">
                </instanceof>
                <instanceof
                      value="com.cwctravel.plugins.shelvesetreview.navigator.model.ShelvesetResourceItem">
-               </instanceof>
-               <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.ShelvesetDiscussionItem">
-               </instanceof>
-               <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.CodeReviewItemContainer">
                </instanceof>
             </or>
          </possibleChildren>
          <triggerPoints>
             <or>
                <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.BaseItemContainer">
-               </instanceof>
-               <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.ShelvesetGroupItemContainer">
-               </instanceof>
-               <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.CodeReviewItemContainer">
-               </instanceof>
-               <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.ShelvesetGroupItem">
-               </instanceof>
-               <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.ShelvesetUserItem">
-               </instanceof>
-               <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.ShelvesetUserCategoryItem">
-               </instanceof>
-               <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.ShelvesetItem">
-               </instanceof>
-               <instanceof
-                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.ShelvesetDiscussionItem">
+                     value="com.cwctravel.plugins.shelvesetreview.navigator.model.IItemContainer">
                </instanceof>
                <instanceof
                      value="com.cwctravel.plugins.shelvesetreview.navigator.model.ShelvesetResourceItem">
@@ -672,15 +636,6 @@
    </extension>
    <extension
          point="org.eclipse.ui.perspectiveExtensions">
-      <perspectiveExtension
-            targetID="org.eclipse.jdt.ui.JavaPerspective">
-         <view
-               id="com.cwctravel.plugins.shelvesetreview.views.ReviewCommentsView"
-               ratio="0.5"
-               relationship="right"
-               relative="org.eclipse.ui.views.ProblemView">
-         </view>
-      </perspectiveExtension>
    </extension>
    <extension
          point="org.eclipse.help.contexts">
